WIP: adding fractional positions